[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/AssaultRifle.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/UserInterface.gd" type="Script" id=3]

[sub_resource type="CylinderShape" id=3]
height = 4.0

[sub_resource type="CapsuleMesh" id=2]
mid_height = 2.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="BodyCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 1.06581e-14, 0, -1.06581e-14, 1, 0, 2, 0 )
shape = SubResource( 3 )

[node name="BodyVisual" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2, 0 )
mesh = SubResource( 2 )

[node name="CameraHolder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Camera" type="Camera" parent="CameraHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
current = true
fov = 90.0

[node name="ShootCast" type="RayCast" parent="CameraHolder/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="Weapons" type="Spatial" parent="CameraHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.988706, 0, -1.57298 )

[node name="AssaultRifle" parent="CameraHolder/Weapons" instance=ExtResource( 2 )]

[node name="AimPosition" type="Position3D" parent="CameraHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -1.2 )

[node name="IsOnFloor" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UserInterface" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UserInterface"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
color = Color( 0, 0, 0, 1 )

[node name="AmmoUserInterface" type="HBoxContainer" parent="CanvasLayer/UserInterface"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0

[node name="AmmoInMagLabel" type="Label" parent="CanvasLayer/UserInterface/AmmoUserInterface"]
margin_right = 510.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "10"
align = 1
valign = 1

[node name="MagsLabel" type="Label" parent="CanvasLayer/UserInterface/AmmoUserInterface"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "3"
align = 1
valign = 1
